--- a/config/gd_config.yaml
+++ b/config/gd_config.yaml
@@ -8,7 +8,7 @@ checkpoint_url: ""
 data_path: "/cache/data"
 output_path: "/cache/train"
 load_path: "/cache/checkpoint_path"
-device_target: "Ascend"
+device_target: "GPU"
 enable_profiling: False
 
 modelarts_dataset_unzip_name: ''
